<resources>
    <string name="merchant_id">6161925</string>
    <string name="app_name">LearnersIndia</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="email">Email</string>
    <string name="board">Board</string>
    <string name="student_class">Class</string>
    <string name="sign_up">Join Now</string>
    <string name="login">Login</string>
    <string name="error_fields_empty">All fields must be filled</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="user_name">Email / Phone</string>
    <string name="error_retype_password_again">Passwords do not match</string>
    <string name="mobile">Mobile number</string>
    <string name="recommended_questions">Recommended Questions</string>
    <string name="practise">Practise</string>
    <string name="videos">Videos</string>
    <string name="test">Test</string>
    <string name="ask">ASK</string>
    <string name="friends">Friends</string>
    <string name="badges">Badges</string>
    <string name="rank">Rank</string>
    <string name="points">Points</string>
    <string name="subscription">Subscription : </string>
    <string name="subscription_free">Free</string>
    <string name="premium">Premium</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="call_us">Call Us</string>
    <string name="view_answer">View Answer</string>
    <string name="ask_question">Ask Question</string>
    <string name="logoutMessage">Are you sure about logging out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="storage_permission_rationale">You may need to attach image for asking questions.</string>
    <string name="ask_question_empty">Please type the question</string>
    <string name="chapters">Chapters</string>
    <string name="no_chapters_available">No chapters available currently.</string>
    <string name="please_allow_permission">Please allow required permissions</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="terms_and_conditions"><![CDATA[You agree to Learners India\'s User Agreement, Privacy Policy and Cookie Policy. For phone number and sign ups we will send a verification code via SMS]]></string>
    <string name="login_top_message">Login with your   Learners India Account details</string>
    <string name="no_questions_available">No questions available</string>
    <string name="questions">Questions</string>
    <string name="response_type_error">error</string>
    <string name="notification">Notifications</string>
    <string name="game">Games</string>
    <string name="ask_home">Ask doubt</string>
    <string name="best_of_learners_india">Demo Videos</string>
    <string name="no_videos_available">No videos  available</string>
    <string name="add_answer">Add Answer</string>
    <string name="no_answers_available">No answers available</string>
    <string name="answers">Answers</string>
    <string name="text_no_content_available">No content found</string>
    <string name="exercise">Exercises</string>
    <string name="video_lessons">Video lessons</string>
    <string name="more"><![CDATA[More >>]]></string>
    <string name="agree_and_join"><![CDATA[Agree & Join]]></string>
    <string name="share_app_caption">Brushing up your knowledge in Maths has never been easier.</string>
    <string name="number_of_questions">Number of Questions : %d</string>
    <string name="instructions_for_the_test">Instructions for the Test</string>
    <string name="test_instructions"><![CDATA[Please keep a pen and paper ready for rough work.
    The test will start as soon as you click start button.
    It is advised to turn off auto lock on your device,
    although you can still resume the test from the previous stage.
    \n\nThe correct answer of a question is displayed immediately after you answered a questions.
     There are no time limits.]]></string>
    <string name="your_score">Your Score : %s</string>
    <string name="game_instructions"><![CDATA[Please keep a pen and paper ready for rough work.
    The test will start as soon as you click start button.
    It is advised to turn off auto lock on your device,
    although you can still resume the test from the previous stage.
    \n\nThe correct answer of a question is displayed immediately after you answered a questions.
     There are no time limits.]]></string>
    <string name="you_reached">You Scored: %s</string>
    <string name="extra_life_text">You got an extra life</string>
    <string name="extra_life_lost">Extra life lost</string>
    <string name="already_used">already_used</string>
    <string name="question_count">Question %d</string>
    <string name="question_marks">Marks : %d</string>
    <string name="my_videos">My Videos</string>
    <string name="profile">Profile</string>
    <string name="game_quit">Do you really want to quit the game</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.gbmainframe.learnersindia</string>
    <string name="otp_hint">An SMS with 6 digit OTP has been sent to your registered mobile number please enter it below.</string>
    <string name="unlock_rest_premium">Unlock the the rest of the list with Premium</string>
    <string name="you_are_premium">You are premium member</string>
    <string name="reset_password">Reset Password</string>

</resources>
