<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="16dp"
        android:gravity="center"
        android:divider="@drawable/divider_vertical"
        android:orientation="vertical"
        android:showDividers="middle">


        <EditText
            android:id="@+id/passwordText"
            style="@style/SignUpText"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordRetype"
            style="@style/SignUpText"
            android:layout_marginBottom="3dp"
            android:hint="@string/retype_password"
            android:inputType="textPassword" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/resetPassword"
            style="@style/StyleLoginRectangleButtonHollow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="@style/ProgressBarStyleWhite" />
</RelativeLayout>
