<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/home_toolbar" />


    <com.gbmainframe.learnersindia.views.HomeItem
        android:id="@+id/homeItemPractise"
        style="@style/HomeItemStyle"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        app:headerColor="@color/paleGreen"
        app:homeItemImage="@drawable/practice_o"
        app:homeItemText="@string/practise" />


    <com.gbmainframe.learnersindia.views.HomeItem
        android:id="@+id/homeItemTest"
        style="@style/HomeItemStyle"
        android:layout_below="@+id/homeItemPractise"
        android:layout_marginLeft="20dp"
        app:headerColor="@color/paleViolet"
        app:homeItemImage="@drawable/test"
        app:homeItemText="@string/test" />

    <com.gbmainframe.learnersindia.views.HomeItem
        android:id="@+id/homeItemVideo"
        style="@style/HomeItemStyle"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/homeItemPractise"
        app:headerColor="@color/paleBrown"
        app:homeItemImage="@drawable/play"
        app:homeItemText="@string/videos" />

    <TextView
        android:id="@+id/recommendedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeItemTest"
        android:layout_marginTop="30dp"
        android:background="@color/offWhite"
        android:fontFamily="@font/nawabiat"
        android:padding="5dp"
        android:text="@string/recommended_questions"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@id/recommendedText"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerRecommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" />

        <ProgressBar
            android:id="@+id/progressHome"
            style="@style/ProgressBarStyle" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingButtonAsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="16dp"
            android:fontFamily="@font/nawabiat"
            android:text="@string/ask"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <com.quinny898.library.persistentsearch.SearchBox
        android:id="@+id/searchbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <!--<fr.castorflex.android.smoothprogressbar.SmoothProgressBar xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:id="@+id/searchProgress"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/searchbox"-->
    <!--android:indeterminate="true"-->
    <!--app:spb_color="#FF0000"-->
    <!--app:spb_mirror_mode="false"-->
    <!--app:spb_progressiveStart_activated="true"-->
    <!--app:spb_progressiveStart_speed="1.5"-->
    <!--app:spb_progressiveStop_speed="3.4"-->
    <!--app:spb_reversed="false"-->
    <!--app:spb_sections_count="4"-->
    <!--app:spb_speed="2.0"-->
    <!--app:spb_stroke_separator_length="4dp"-->
    <!--app:spb_stroke_width="4dp" />-->
</RelativeLayout>