<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/userProfileTop"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/profileBg"
                android:src="@drawable/top"
                android:scaleType="fitStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="20dp"
                android:src="@drawable/face"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/profile_image"
                android:fontFamily="@font/nawabiat"
                android:textColor="@color/offWhite"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/className"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/name"
                android:layout_below="@+id/name"
                android:fontFamily="@font/nawabiat"
                android:textColor="@color/offWhite"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/userProfileStat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/friendsText"
                        style="@style/UserProfileBottomButtonsStyle"
                        android:text="0"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/friendsValue"
                        style="@style/UserProfileBottomButtonsStyle"
                        android:text="@string/friends" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/UserProfileBottomButtonsStyle"
                        android:text="0"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/badges"
                        style="@style/UserProfileBottomButtonsStyle"
                        android:text="@string/badges" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/UserProfileBottomButtonsStyle"
                        android:text="260"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/points"
                        style="@style/UserProfileBottomButtonsStyle"
                        android:text="@string/points" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/UserProfileBottomButtonsStyle"
                        android:text="0"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/rank"
                        style="@style/UserProfileBottomButtonsStyle"
                        android:text="@string/rank" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/userProfileTop">

            <LinearLayout
                android:id="@+id/subscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/offWhite"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:id="@+id/subscriptionText"
                    style="@style/UserProfileTextStyles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_toLeftOf="@+id/subscriptionValue"
                    android:layout_weight="1"
                    android:text="@string/subscription" />

                <TextView
                    android:id="@+id/subscriptionValue"
                    style="@style/UserProfileTextStyles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/subscription_free"
                    android:textColor="@color/paleGreen" />

                <Button
                    android:id="@+id/buttonPremium"
                    style="@style/StyleLoginButtonHollow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/subscriptionValue"
                    android:text="@string/premium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subscription"
                android:background="@color/offWhite"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_black_24dp" />

                <TextView
                    style="@style/UserProfileTextStyles"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/edit_profile" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inviteFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editProfile"
                android:layout_marginTop="1dp"
                android:background="@color/offWhite"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_insert_invitation" />

                <TextView
                    style="@style/UserProfileTextStyles"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/invite_friends" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inviteFriends"
                android:layout_marginTop="1dp"
                android:background="@color/offWhite"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_feedback_black_24dp" />

                <TextView
                    style="@style/UserProfileTextStyles"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/feedback" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/callUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/feedback"
                android:layout_marginTop="1dp"
                android:background="@color/offWhite"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_call_us" />

                <TextView
                    style="@style/UserProfileTextStyles"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/call_us" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/callUs"
                android:layout_marginTop="1dp"
                android:background="@color/offWhite"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_exit_to_app_black_24dp" />

                <TextView
                    style="@style/UserProfileTextStyles"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:text="@string/logout"
                    android:textColor="@color/paleBrown" />
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>
</ScrollView>